adding team logo to predictions page
